--- a/web/components/WiGO/PerGameStatsTable.module.scss
+++ b/web/components/WiGO/PerGameStatsTable.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: v.$background-medium;
+  background-color: v.$background-dark;
   color: v.$text-color-primary;
   font-family: v.$font-family-primary;
   display: flex;
@@ -36,7 +36,7 @@ table.verticalStatsTable {
   height: 100%;
   border-collapse: collapse;
   table-layout: fixed; // Helps with column widths
-  border-bottom: 8px solid darken(v.$background-light, 4%); // Optional: border for visual separation
+  border-bottom: 8px solid lighten(v.$background-dark, 3%); // Optional: border for visual separation
 
   th,
   td {
@@ -78,7 +78,7 @@ table.verticalStatsTable {
     padding: v.$space-sm;
     font-size: v.$font-size-small * 0.9;
     letter-spacing: 0.25em;
-    background-color: lighten(v.$background-dark, 1%);
+    background-color: darken(v.$background-dark, 5%);
     color: v.$text-primary-color;
     font-weight: 900;
     position: sticky; // Make header row sticky
@@ -105,11 +105,11 @@ table.verticalStatsTable {
   tbody tr {
     transition: background-color v.$transition-duration v.$transition-easing;
     &:nth-child(even) {
-      background-color: lighten(v.$background-light, 0%);
+      background-color: darken(v.$background-light, 1%);
     }
 
     &:nth-child(odd) {
-      background-color: lighten(v.$background-light, 2%);
+      background-color: darken(v.$background-light, 3%);
     }
     &:hover {
       background-color: color.scale(v.$primary-color, $alpha: -70%);
